--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.45", features = ["derive"] }
 pnet = "0.35.0"
-libc = "0.2.175"
+thiserror = "2.0.16"
