--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.45", features = ["derive"] }
+mac_oui = { version = "0.4.10", features = ["with-db"] }
 pnet = "0.35.0"
 thiserror = "2.0.16"
 anyhow = "1.0.99"
