--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2024"
 clap = { version = "4.5.45", features = ["derive"] }
 mac_oui = { version = "0.4.10", features = ["with-db"] }
 pnet = "0.35.0"
-thiserror = "2.0.16"
 anyhow = "1.0.99"
 colored = "3.0.0"
 rand = "0.9.2"
 tokio = { version = "1.47.1", features = ["full"] }
 is-root = "0.1.3"
 indicatif = "0.18.0"
+once_cell = "1.21.3"
