--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1.47.1", features = ["full"] }
 is-root = "0.1.3"
 indicatif = "0.18.0"
 once_cell = "1.21.3"
+sys-info = "0.9.1"
