--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mappr"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 
 [dependencies]
@@ -15,3 +15,5 @@ is-root = "0.1.3"
 indicatif = "0.18.0"
 once_cell = "1.21.3"
 sys-info = "0.9.1"
+sysinfo = "0.37.2"
+netstat2 = "0.11.2"
