--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mappr"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
 
 [dependencies]
@@ -17,3 +17,4 @@ once_cell = "1.21.3"
 sys-info = "0.9.1"
 sysinfo = "0.37.2"
 netstat2 = "0.11.2"
+unicode-width = "0.2.2"
