--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.99"
 colored = "3.0.0"
 rand = "0.9.2"
 tokio = { version = "1.47.1", features = ["full"] }
+async-trait = "0.1.86"
 is-root = "0.1.3"
 indicatif = "0.18.0"
 sys-info = "0.9.1"
