removed boilerplate vendor code

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,5 +9,6 @@ thiserror = { workspace = true }
 pnet = { workspace = true }
 crossterm = { workspace = true }
 async-trait = { workspace = true }
+mac_oui = { version = "0.4.7", features = ["with-db"] }
 
 
