--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,6 +9,7 @@ thiserror = { workspace = true }
 pnet = { workspace = true }
 crossterm = { workspace = true }
 async-trait = { workspace = true }
+rayon = { workspace = true }
 mac_oui = { version = "0.4.7", features = ["with-db"] }
 
 
