--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,8 @@ pnet = { workspace = true }
 unicode-width = "0.1"
 sys-info = "0.9"
 is-root = "0.1.3"
+tracing = { workspace = true }
+tracing-subscriber = "0.3.18"
 
 [[bin]]
 name = "mappr"
