--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,6 +12,7 @@ pnet = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 rand = { workspace = true }
+tracing = { workspace = true }
 is-root = "0.1.3"
 
 
