--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,6 +20,7 @@ sys-info = "0.9"
 is-root = "0.1.3"
 tracing = { workspace = true }
 tracing-subscriber = "0.3.18"
+tracing-indicatif = "0.3.14"
 
 [[bin]]
 name = "mappr"
