--- a/protocols/Cargo.toml
+++ b/protocols/Cargo.toml
@@ -9,4 +9,5 @@ pnet = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 rand = { workspace = true }
+tracing = { workspace = true }
 
