--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -19,7 +19,7 @@ unicode-width = "0.1"
 sys-info = "0.9"
 is-root = "0.1.3"
 tracing = { workspace = true }
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-indicatif = "0.3.14"
 
 [[bin]]
