--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ members = [
     "common",
     "protocols",
     "plugins",
+    "tests",
 ]
 
 [workspace.dependencies]
 anyhow = "1.0.99"
 tokio = { version = "1.47.1", features = ["full"] }
 async-trait = "0.1.86"
-colored = "3.0.0"
+colored = "3.1.1"
 clap = { version = "4.5.45", features = ["derive"] }
 pnet = "0.35.0"
 rand = "0.9.2"
