--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "mappr-plugins"
+name = "zond-plugins"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-mappr-common = { workspace = true }
-mappr-protocols = { workspace = true }
+zond-common = { workspace = true }
+zond-protocols = { workspace = true }
 async-trait = { workspace = true }
 anyhow = { workspace = true }
