--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -13,10 +13,10 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 rand = { workspace = true }
 tracing = { workspace = true }
+
+hickory-resolver = "0.25.2"
 is-root = "0.1.3"
-
-
-sysinfo = "0.29.10"
+sysinfo = "0.38.0"
 
 
 
